--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
+
 {
   "name": "mwalimu-whatsapp-api",
   "version": "1.0.0",
-  "description": "WhatsApp Bot avec Gemini",
+  "description": "Bot WhatsApp éducatif avec OpenAI",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.0"
+    "express": "^4.18.2",
+    "axios": "^1.6.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
