--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
 {
   "name": "mwalimu-whatsapp-api",
   "version": "1.0.0",
-  "description": "Bot WhatsApp éducatif avec OpenAI",
+  "description": "MWALIMU EdTech WhatsApp Bot",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node app.js"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "axios": "^1.6.0"
-  },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "18.x"
+  },
+  "dependencies": {
+    "axios": "^1.6.0",
+    "express": "^4.18.2",
+    "openai": "^4.0.0"
   }
 }
