--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
 {
   "name": "mwalimu-whatsapp-api",
   "version": "1.0.0",
-  "description": "MWALIMU EdTech WhatsApp Bot",
+  "description": "Bot WhatsApp éducatif avec OpenAI",
   "main": "app.js",
-  "type": "module",
   "scripts": {
     "start": "node app.js"
   },
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
-    "axios": "^1.6.0",
     "express": "^4.18.2",
-    "openai": "^4.0.0"
+    "axios": "^1.6.0",
+    "openai": "^4.28.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
