--- a/package.json
+++ b/package.json
@@ -2,17 +2,15 @@
 {
   "name": "mwalimu-whatsapp-api",
   "version": "1.0.0",
-  "description": "Bot WhatsApp éducatif avec OpenAI",
+  "description": "Assistant éducatif pour la RDC",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.6.0",
-    "openai": "^4.28.0"
-  },
-  "engines": {
-    "node": ">=14.0.0"
+    "express": "^4.18.2",
+    "node-cron": "^3.0.3",
+    "openai": "^4.20.0"
   }
 }
